# snatch-phase-bench

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements-reproduction.txt  requirements.txt
analysis/bootstrap/: bootstrap_summaries.json  per_athlete_mean_metrics.json  per_athlete_seed_metrics.json
analysis/iaa/: subset_manifest.json
configs/: .gitkeep  baseline_lstm.yaml  benchmark.yaml  reproduction.yaml
configs/benchmark/: asformer.yaml  ms_tcn.yaml
configs/ontology/: five_phase_knee_angle_v1.yaml  seven_phase_v1.yaml  seven_to_five_knee_angle_v1.yaml
data/: README.md
docs/: FROZEN_BASELINE.md  README.md  REPRODUCTION_PLAN.md  SCIENTIFIC_WORKFLOW.md  WORKSPACE_POLICY.md  evaluation_metrics.md  figures_plan.md  project_architecture.md  research_design.md  tables_plan.md
docs/annotation/: IAA_PIPELINE.md  IAA_PROTOCOL.md
docs/audit/: PROJECT_AUDIT.md  QUESTIONS_FOR_STUDENT.md  REPRODUCTION_PLAN_LEGACY.md  RESEARCH_ROADMAP.md
docs/benchmark/: ASFORMER_DESIGN.md  ASFORMER_PROTOCOL.md  ASFORMER_RESULTS_SUMMARY.md  B0_EVIDENCE_MATRIX.md  B0_EXPLORATORY_REFERENCE.md  B0_IMPLEMENTATION_SPECIFICATION.md  BASELINE_SPECIFICATION.md  BENCHMARK_GOVERNANCE.md  BENCHMARK_PLAN.md  BENCHMARK_PROTOCOL.md  EXPERIMENT_MATRIX.md  MS_TCN_DESIGN.md  MS_TCN_INTEGRATION.md  MS_TCN_M3_PROTOCOL.md  MS_TCN_M3_READINESS.md  (+3 more)
paper/: Makefile  WRITING_STATUS.md  bibliography.bib  macros.tex  main.tex
scripts/: .gitkeep  aggregate_ms_tcn_results.py  asformer_failure_analysis.py  compute_iaa_agreement.py  eval_asformer.py  eval_ms_tcn.py  generate_asformer_figures.py  generate_ms_tcn_figures.py  ms_tcn_failure_analysis.py  prepare_iaa_workpack.py  run_asformer_benchmark.py  run_athlete_paired_bootstrap.py  run_iaa_pipeline.py  run_ms_tcn_benchmark.py  run_phase2_reproduction.py  train_asformer.py  train_ms_tcn.py
tests/: conftest.py  test_artifact_inventory.py  test_asformer.py  test_athlete_paired_bootstrap.py  test_benchmark_registry.py  test_canonical_metrics.py  test_config.py  test_data_frame_pipeline.py  test_data_splits.py  test_evaluation_metrics.py  test_frame_labels.py  test_frame_sequence.py  test_iaa.py  test_iaa_pipeline.py  test_loaders.py  test_model_registry.py  test_ms_tcn_blocks.py  test_ms_tcn_config.py  test_ms_tcn_core.py  test_ms_tcn_hardware.py  test_ms_tcn_inference.py  test_ms_tcn_integration.py  test_ms_tcn_loss.py  test_ms_tcn_loss_extended.py  test_ms_tcn_model.py  test_ms_tcn_model_extended.py  test_ms_tcn_preflight.py  test_ms_tcn_trainer_extended.py  test_ms_tcn_trainer_smoke.py  test_paths.py  test_phase_ontology.py  test_project_layout.py  test_split_validation.py  test_tas_hooks.py
(+183 files in other folders)
