[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snatch-phase-bench"
version = "0.1.0"
description = "Dataset and benchmark for snatch phase temporal segmentation from pose sequences"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TODO" }
authors = [{ name = "SnatchPhaseBench Contributors" }]
keywords = ["temporal segmentation", "weightlifting", "pose", "benchmark"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy==2.4.3",
  "pandas==3.0.1",
  "pyyaml>=6.0",
  "scikit-learn==1.8.0",
  "scipy==1.17.1",
  "torch==2.10.0",
  "tqdm==4.67.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "matplotlib>=3.8",
]

[project.scripts]
spb-run-experiment = "snatch_phase_bench.experiments.runner:run_experiment"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
